tests/ui/span/gated-features-attr-spans.rs
#[repr(simd)] //~ ERROR are experimental
struct Coord {
    v: [u32; 2],
}

fn main() {}
